# discover_physics

./: .env.example  AGENTS.md  PLAN.md  README.md  SETUP.md  activate.sh  build_log.txt  main.py  pyproject.toml  requirements.txt  resources
config/: agent_params.yaml
src/agent/: navigator.py  perception.py  theorist.py
src/commander/: protocols.py  uplink.py
src/environment/: physics_engine.py  puffer_wrapper.py
tests/: test_commander.py  test_environment.py  test_integration.py
